test-cases/negative/test_140_expect_invalid_actual.lay
# negative test: expect with invalid actual value expression
# expected: parser should reject this

expect
  is 5


